# mmoe

./: .gitignore  PLAN.md  pyproject.toml
expert_BLIP2/: requirements.txt
expert_Qwen2/: calibrate.sh  calibrate_confidence.py  convert_logits.py  funny.py  mmsd.py  temperature_scaling.py  test_all.sh  test_mmsd.sh  train.py  train_all.sh  train_qwen_mmsd.sh
expert_fusion/: blip2_fusion_train.py  fusion.py  fusion_analysis.py  mmsd_fusion_test.sh  mmsd_fusion_train.sh  mustard.py  mustard_fusion_test.sh  mustard_fusion_train.sh  urfunny_fusion_test.sh  urfunny_fusion_train.sh
