[project]
name = "mmoe"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==2.5.1)",
    "transformers (==4.46.2)",
    "pillow (>=11.1.0,<12.0.0)",
    "jsonlines (>=4.0.0,<5.0.0)",
    "peft (>=0.15.0,<0.16.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
